--- a/contact/templates/about.html
+++ b/contact/templates/about.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-     
+    
     <!-- Navigation Bar -->
     <header>
         <div class="logo-container">
@@ -38,7 +38,7 @@
             <li><a href="{% url 'contact' %}" class="nav-item">Contact</a></li>
         </ul>
     </div>
-
+    <div class="container">
     <!-- About Us Section -->
     <section class="about">
         <div class="about-container">
@@ -76,7 +76,7 @@
         </div>
     </footer>
     
-
+</div>
     <script src="{% static '/js/script.js'%}"></script>
 </body>
 </html>
