--- a/contact/templates/services.html
+++ b/contact/templates/services.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services - 4KM Energy Services</title>
     <link rel="stylesheet" href="{% static '/css/services.css' %}">
+    <link rel="stylesheet" href="{% static '/css/styles.css' %}">
     
 </head>
 <body>
+    <div class="container">
     <!-- Header Navigation -->
     <header>
         <div class="logo-container">
@@ -85,6 +87,6 @@
         </div>
     </footer>
     <script src="{% static '/js/script.js'%}"></script>
-    
+    </div> 
 </body>
 </html>
