--- a/contact/static/css/services.css
+++ b/contact/static/css/services.css
@@ -6,6 +6,9 @@
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
 }
+body{
+    overflow-x: hidden;
+}
 
 /* Body Styling */
 .container {
