--- a/contact/static/css/about.css
+++ b/contact/static/css/about.css
@@ -7,7 +7,7 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
+    overflow-x: hidden;
 
 }
 
@@ -41,6 +41,7 @@
     margin-top: 20px;
     background: linear-gradient(to bottom, #3D6D94 50%, white 50%);
     color: black;
+    overflow-x: hidden;
 }
 
 .about-container {
@@ -49,13 +50,14 @@
     background: rgba(255, 255, 255, 0.9);
     border-radius: 15px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+    overflow-x: hidden;
 }
 
 .about h1 {
     font-size: 2.5rem;
     font-weight: bold;
     margin-bottom: 20px;
-    margin-top: 40px;
+    margin-top: 20px;
     color: #3D6D94;
 }
 
