--- a/contact/templates/home.html
+++ b/contact/templates/home.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>4KM Energy Services</title>
     <link rel="stylesheet" href="{% static '/css/styles.css' %}">
 </head>
