google console changes on html files

--- a/contact/templates/home.html
+++ b/contact/templates/home.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>4KM Energy Services</title>
     <link rel="stylesheet" href="{% static '/css/styles.css' %}">
+    
+    <!-- this is the one for verifying the website on google console -->
+    <meta name="google-site-verification" content="googlef25091e866ad8054.html" />
 </head>
 <body>
      
