--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -7,6 +7,9 @@
     <title>Contact Us - 4KM Energy Services</title>
     <link rel="stylesheet" href="{% static '/css/styles.css' %}">
     <link rel="stylesheet" href="{% static '/css/contact.css' %}">
+     
+    <!-- this is the one for verifying the website on google console -->
+    <meta name="google-site-verification" content="googlef25091e866ad8054.html" />
 </head>
 <body>
 
