--- a/contact/templates/home.html
+++ b/contact/templates/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static '/css/styles.css' %}">
 
         <!-- this is the one for verifying the website on google console -->
-        <meta name="google-site-verification" content="googlef25091e866ad8054.html" />
+        <meta name="google-site-verification" content="giywTL91uS21gcTBg1HpXWWDwBqZHfjPQe2Wzq8nde8" />
 
 </head>
 <body>
