--- a/contact/templates/home.html
+++ b/contact/templates/home.html
@@ -9,6 +9,7 @@
 
     <!-- this is the one for verifying the website on google console -->
     <meta name="google-site-verification" content="giywTL91uS21gcTBg1HpXWWDwBqZHfjPQe2Wzq8nde8" />
+    <meta name="google-site-verification" content="googlef25091e866ad8054.html" />
 
 </head>
 <body>
